# dev.dev

./: .gitignore  Cargo.toml  README.md
.github/: secret_scanning.yml
.github/workflows/: ci.yml  create_release.yml
app/: Cargo.toml
app/src/: app_state.rs  lib.rs  port_watcher.rs
app/src/browser_mcp/: bridge.rs  mod.rs
app/src/launch_configs/: launch_config.rs
app/src/pane_group/: mod.rs
app/src/pane_group/pane/: browser_pane.rs  mod.rs  start_page.html
app/src/persistence/: sqlite.rs
app/src/terminal/: event.rs  model_events.rs  view.rs
app/src/terminal/model/: terminal_model.rs
app/src/workspace/: action.rs  header_toolbar_item.rs  mod.rs  util.rs  view.rs
app/src/workspace/view/: left_panel.rs  vertical_tabs.rs
crates/browser_mcp/: Cargo.toml
crates/browser_mcp/src/: lib.rs
crates/warp_core/src/ui/: icons.rs
crates/warpui/: Cargo.toml
crates/warpui/src/: lib.rs  webview_host.rs  webview_init.js
crates/warpui/src/platform/mac/: window.rs
crates/warpui/src/windowing/winit/: window.rs
crates/warpui/src/windowing/winit/event_loop/: mod.rs
crates/warpui_core/src/platform/: mod.rs
crates/warpui_extras/: Cargo.toml
crates/warpui_extras/src/secure_storage/: mac.rs  mac_tests.rs  mod.rs
docs/: MACOS_PORT.md
script/macos/: bundle
