[package]
name = "browser_mcp"
edition = "2024"
description = "MCP (Model Context Protocol) server exposing embedded-browser-pane control as tools for Claude Code CLI and other MCP clients"
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
local_control.workspace = true
log.workspace = true
rand.workspace = true
rmcp = { workspace = true, features = ["server", "transport-streamable-http-server"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
